// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Hero should be defined 1`] = `
<section
  className="anchor-hero sc-jlyJG AeRNs"
/>
`;

exports[`Component: Hero should render with custom content 1`] = `
<section
  className="anchor-hero sc-jlyJG AeRNs"
>
  <h1
    className="anchor-typography anchor-hero-title sc-gipzik igFNNs sc-jhAzac gKCzsP"
    scale={32}
  >
    Good Ole Title
  </h1>
  <span
    className="anchor-typography sc-fBuWsC chlNZk"
  >
    Some Typography text
  </span>
  <button
    className="anchor-button sc-gqjmRU csOwvP"
  >
    CTA
  </button>
</section>
`;

exports[`Component: Hero should render with title 1`] = `
<section
  className="anchor-hero sc-jlyJG AeRNs"
>
  <h1
    className="anchor-typography anchor-hero-title sc-gipzik igFNNs sc-Rmtcm erQPNy"
    scale={32}
  >
    Hero Title
  </h1>
</section>
`;

exports[`Component: Hero should render with title and subtitle 1`] = `
<section
  className="anchor-hero sc-jlyJG AeRNs"
>
  <h1
    className="anchor-typography anchor-hero-title sc-gipzik igFNNs sc-bRBYWo sqSIN"
    scale={32}
  >
    Hero Title
  </h1>
  <span
    className="anchor-typography anchor-hero-subtitle sc-csuQGl hlMNmh sc-hzDkRC gqjPeY"
    scale={18}
  >
    Hero Subtitle
  </span>
</section>
`;
